# py-sp

./: .gitignore  Dockerfile  Dockerfile.prod  Makefile  README.md  alembic.ini  automated_testing_suite.py  docker-compose.yml  env.example  nginx.conf  pyproject.toml  requirements-pytorch.txt  requirements.txt  run_bot.py  setup_database.sql  test_bot.py  test_bot_simple.py  test_cas_real.py
alembic/: env.py
alembic/versions/: 001_create_production_tables.py  001_initial_schema.py  002_add_api_db.py  002_add_spam_counter_fields.py  003_add_bothub_fields.py  004_create_chats_table.py  005_add_bothub_model.py  006_add_chat_system_prompt.py  007_add_ban_notifications_to_chats.py  008_add_chat_id_to_approved_users.py  009_drop_unused_api_tables.py  010_create_banned_users_if_not_exists.py  011_add_bothub_statistics.py  012_fix_approved_users_constraint.py
antispam_client/: client.py
config/: development.yaml  production.yaml
src/: main.py
src/adapter/cache/: redis_cache.py
src/adapter/gateway/: bothub_gateway.py  cas_gateway.py  openai_gateway.py  telegram_chat_gateway.py  telegram_gateway.py
src/adapter/repository/: api_key_repository.py  chat_repository.py  message_repository.py  spam_samples_repository.py  usage_repository.py  user_repository.py
src/config/: config.py  dependencies.py
src/delivery/http/: app.py
src/delivery/telegram/: bot.py
src/domain/analytics/: usage_analytics.py
src/domain/entity/: api_key.py  chat.py  client_usage.py  detection_result.py  message.py  spam_sample.py  usage_stats.py  user.py
tests/performance/: locustfile.py
(+48 files in other folders)
